# amka-cli

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BUILD_PROCESS.md  CLI.md  DEMO.md  DESIGN.md  ROADMAP.md  SECURITY.md
scripts/: check.sh
src/amka/: __init__.py  __main__.py  cli.py  errors.py  models.py  notifier.py  scheduler.py  timeparse.py
tests/cli/: test_cli.py
tests/integration/: test_v0_alarm.py
tests/unit/: test_models.py  test_notifier.py  test_scheduler.py  test_timeparse.py
