[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amka-cli"
version = "0.1.0"
description = "A local-first Python CLI for scheduling prompt alarms."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Abhinav Sivanandhan" },
]
dependencies = [
    "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
amka = "amka.cli:app"

[project.urls]
Repository = "https://github.com/AbhinavSivanandhan/amka-cli"
Issues = "https://github.com/AbhinavSivanandhan/amka-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
amka = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["amka"]

[tool.coverage.report]
fail_under = 85

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
